# HyperInfer

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_plan.sh  test_redis_timeout.rs
.changeset/: config.json
.github/: dependabot.yml  pull_request_template.md
.github/runner/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yaml  pr_agent.yml  python-ci.yml  release.yml  rust-ci.yml  test.yml
.jules/: sentinel.md
.opencode/: opencode.jsonc
.opencode/commands/: review.md
.opencode/prompts/: code-reviewer.md
.scannerwork/: report-task.txt
.sonarlint/: connectedMode.json
.trunk/: trunk.yaml
apps/dashboard/: package-lock.json  package.json  tailwind.config.js
apps/dashboard/src/: app.css  app.html
apps/dashboard/src/lib/: api.ts  types.ts
apps/dashboard/src/lib/components/: Sidebar.svelte  UsageChart.svelte  VirtualList.svelte
apps/dashboard/src/lib/stores/: auth.ts  theme.ts
apps/dashboard/src/routes/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/dashboard/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/dashboard/conversations/: +page.svelte
apps/dashboard/src/routes/dashboard/conversations/[id]/: +page.svelte
apps/dashboard/src/routes/dashboard/keys/: +page.svelte
apps/dashboard/src/routes/dashboard/keys/[id]/metrics/: +page.svelte
apps/dashboard/src/routes/dashboard/settings/: +page.svelte
apps/dashboard/src/routes/dashboard/teams/: +page.svelte
apps/dashboard/src/routes/dashboard/teams/[id]/: +page.svelte
apps/dashboard/src/routes/dashboard/teams/[id]/budget/: +page.svelte
apps/dashboard/src/routes/dashboard/teams/[id]/keys/: +page.svelte
apps/dashboard/src/routes/dashboard/teams/[id]/usage/: +page.svelte
apps/dashboard/src/routes/login/: +page.svelte
bindings/hyperinfer-langchain/: CHANGELOG.md  README.md  package.json  pyproject.toml
bindings/hyperinfer-langchain/src/hyperinfer_langchain/: __init__.py
bindings/hyperinfer-langchain/tests/: conftest.py  test_langchain.py
bindings/hyperinfer-llamaindex/: CHANGELOG.md  README.md  package.json  pyproject.toml
bindings/hyperinfer-llamaindex/src/hyperinfer_llamaindex/: __init__.py
bindings/hyperinfer-llamaindex/tests/: conftest.py  test_llamaindex.py
crates/hyperinfer-client/: CHANGELOG.md  Cargo.toml  package.json
crates/hyperinfer-client/src/: cache.rs  http_client.rs  lib.rs  mirroring.rs  router.rs  telemetry.rs  telemetry_otlp.rs  util.rs
crates/hyperinfer-core/: CHANGELOG.md  Cargo.toml  package.json
crates/hyperinfer-core/src/: error.rs  lib.rs  rate_limiting.rs  redis.rs  telemetry_consumer.rs  types.rs
crates/hyperinfer-core/src/traits/: config_store.rs  database.rs  mod.rs
crates/hyperinfer-core/tests/: rate_limiting-integration.rs  telemetry-integration.rs
crates/hyperinfer-providers/: Cargo.toml
crates/hyperinfer-providers/src/: anthropic.rs  lib.rs  openai.rs  provider_trait.rs  registry.rs
crates/hyperinfer-python/: CHANGELOG.md  Cargo.toml  README.md  package.json  pyproject.toml
crates/hyperinfer-python/python/hyperinfer/: __init__.py  _hyperinfer.pyi  client.py  config.py  telemetry.py
crates/hyperinfer-python/python/hyperinfer_langchain/: __init__.py
crates/hyperinfer-python/python/hyperinfer_llamaindex/: __init__.py
crates/hyperinfer-python/src/: client.rs  lib.rs  providers.rs  registry_wrapper.rs  types.rs
crates/hyperinfer-python/tests/: test_client.py  test_integration.py  test_otel.py
crates/hyperinfer-python/tests/integration/: test_redis_integration.py
crates/hyperinfer-server/: CHANGELOG.md  Cargo.toml  package.json
crates/hyperinfer-server/migrations/: 001_initial_schema.sql  001_teams.sql  002_usage_logs.sql  002_users.sql  003_api_keys.sql  003_usage_logs_composite_index.sql  004_add_password_hash.sql  004_model_aliases.sql  005_quotas.sql  006_auto_update_timestamp.sql  007_quotas_team_id_not_null.sql  008_api_key_owner_check.sql  009_remove_quotas_budget.sql  010_check_constraints.sql
crates/hyperinfer-server/src/: admin_auth.rs  auth.rs  db.rs  frontend.rs  lib.rs  main.rs  mcp.rs  seeding.rs
crates/hyperinfer-server/tests/: admin_auth_test.rs  integration.rs
docs/: phase1_implementation_details.md  phase1_plan.md
docs/plans/: 2026-02-21-testing-infrastructure-design.md
docs/superpowers/specs/: 2026-03-23-hyperinfer-modular-provider-system-design.md
scripts/: build-package.sh  get-changed-packages.js  sync-versions.js
