[project]
name = "hyperinfer-langchain"
version = "0.1.0"
description = "LangChain integration for HyperInfer LLM Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperinfer",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperinfer_langchain"]

[tool.uv.sources]
hyperinfer = { path = "../../crates/hyperinfer-python", editable = true }
