[project]
name = "hyperinfer-langchain"
version = "0.1.1"
description = "LangChain integration for HyperInfer LLM Gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperinfer",
    "langchain-core~=1.2",
    "langchain-community~=0.4"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperinfer_langchain"]

[tool.uv.sources]
hyperinfer = { workspace = true }

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.5.1",
]
