[package]
name = "hyperinfer-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
redis = "1.0"
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1"