[package]
name = "hyperinfer-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
redis = { version = "1.0", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["sync", "rt"] }
tracing = "0.1"
futures-util = "0.3"
