[package]
name = "hyperinfer-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
test-mocks = ["mockall"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
redis = { version = "1.0", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
reqwest = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["sync", "rt"] }
tracing = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
mockall = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mockall = "0.13"
