[package]
name = "hyperinfer-providers"
version = "0.1.0"
edition = "2021"
description = "Modular LLM provider system for HyperInfer"

[features]
default = ["openai", "anthropic"]
openai = []
anthropic = []
azure = []

[dependencies]
hyperinfer-core = { path = "../hyperinfer-core" }
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
dyn-clone = "1.0.20"
