[package]
name = "hyperinfer-python"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = [
  "tokio-runtime",
  "attributes",
] }
hyperinfer-client = { path = "../hyperinfer-client" }
hyperinfer-core = { path = "../hyperinfer-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
