[package]
name = "hyperinfer-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
hyperinfer-core = { path = "../hyperinfer-core" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "migrate",
  "time",
  "chrono",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
