[package]
name = "hyperinfer-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "hyperinfer_server"
path = "src/lib.rs"

[[bin]]
name = "hyperinfer-server"
path = "src/main.rs"

[dependencies]
hyperinfer-core = { path = "../hyperinfer-core" }
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "migrate",
  "time",
  "chrono",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "1.0", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }

[dev-dependencies]
hyperinfer-core = { path = "../hyperinfer-core", features = ["test-mocks"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
http-body-util = "0.1"
mockall = "0.14"
