[package]
name = "hyperinfer-server"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
name = "hyperinfer_server"
path = "src/lib.rs"

[[bin]]
name = "hyperinfer-server"
path = "src/main.rs"

[dependencies]
hyperinfer-core = { path = "../hyperinfer-core" }
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "migrate",
  "time",
  "chrono",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "1.0", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
sha2 = "0.10"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
serde_json = "1.0"
futures = "0.3"
async-stream = "0.3"
axum-extra = { version = "0.12", features = ["typed-header"] }
headers = "0.4"

[dev-dependencies]
hyperinfer-core = { path = "../hyperinfer-core", features = ["test-mocks"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
http-body-util = "0.1"
mockall = "0.14"
axum-test = "19"
